# dynamic-community-fba

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  SystemsBiologyLab.md  dcFBA_EndPointFBA.py  dcFBA_buildCommunityModel.py  dcFBA_classicDynamicFBA.py  dcFBA_cocultureDynamicFBA.py  dcFBA_dynamicCrossFeedingFBA.py  dcFBA_loadSingleModel.py  dcFBA_main.py  dcFBA_numericResults.py  dcFBA_setMMCostraints.py  dcFBA_visualizations.py  dcFBA_zigzagFBA.py  endpoint_c.json  output_main.txt  pyproject.toml  qp_code.py  script.py  setup.cfg  sysbio_env.yml  test.py  test_cobra.py  test_efb.xml  testingQP.py
.circleci/: config.yml
DCFBA/: DefaultModels.py  Exceptions.py  __init__.py  test.ipynb
DCFBA/DynamicModels/: DynamicFBA.py  DynamicFBABase.py  DynamicJointFBA.py  DynamicModelBase.py  DynamicParallelFBA.py  DynamicSingleFBA.py  EndPointFBA.py  StaticOptimizationModel.py  StaticOptimzationModel.py  TimeStepDynamicFBABase.py  TimeStepDynamicModel.py  __init__.py
DCFBA/Helpers/: BuildCommunityMatrix.py  BuildEndPointModel.py  OptimalSearch.py  OptimalTimeSearch.py  PlotsEndPointFBA.py  ScanUnusedReactions.py  __init__.py
DCFBA/Models/: CommunityModel.py  Kinetics.py  Transporters.py  __init__.py
DCFBA/ToyModels/: DJFBA_example.py  EndPointFBA_example.py  Parallel_example.py  combined_model.py  model_a.py  model_b.py  model_c.py
DCFBA/ToyModels/Examples/: DJFBA_example.py  DynamicFBA.py  DynamicSingle.py  DynamicSingle_example.py  EndPointFBA_example.py  Parallel_example.py  epFBA_QP_example.py
code/: main.py  test.py
code/endPointFBA/: CombinedModel.py  CommunityModel.py  DynamicFBABase.py  DynamicJointFBA.py  DynamicParallelFBA.py  KineticModel.py  build_community_matrix.py  debug.py  dynamic_fba.py  jointFBA.py  test.ipynb
code/endPointFBA/Exceptions/: NotInCombinedModel.py
code/endPointFBA/Models/: Kinetics.py  Transporters.py
code/endPointFBA/helpers/: KineticsReaderInterface.py  build_community_matrix.py
code/example/: example.py
code/tests/: test_CombinedModel.py  test_CommunityModel.py  test_build_community_matrix.py  test_dynamic_FBA.py  test_example.py
code/tests/helpers/: combined_model.py  model_a.py  model_b.py  model_c.py
code/toy_models/: model_a.py  model_c.py
data/toy_model/: toy_organism_A.xml
docs/: CONTRIBUTORS.md  conf.py  index.rst  requirements.txt
docs/10_API/: DCFBA.rst
docs/1_installation/: home.rst
docs/2_getting_started/: home.rst
docs/3_DynamicFBA/: home.rst
docs/3_parallel_dfba/: home.rst
docs/4_community_matrix/: home.rst
docs/5_djoint/: home.rst
docs/6_parallel_dfba/: home.rst
docs/7_Advanced/: home.rst
docs/7_endpoint_fba/: home.rst
docs/8_API/: DCFBA.rst  endPointFBA.rst  modules.rst
docs/8_Advanced/: home.rst
docs/9_API/: DCFBA.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/latex/: dynamic-community-fba.aux  dynamic-community-fba.fdb_latexmk  dynamic-community-fba.fls  dynamic-community-fba.idx  dynamic-community-fba.ilg  dynamic-community-fba.ind  dynamic-community-fba.out  dynamic-community-fba.tex  dynamic-community-fba.toc
models/: strep_stuff.txt  test_model.xml
models/bigg_models/: strep_therm.xml
models/toy_model/: toy_organism_B.xml
output/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
output/10_API/: DCFBA.html
output/1_installation/: home.html
output/2_getting_started/: home.html
output/4_community_matrix/: home.html
output/5_djoint/: home.html
output/9_faq/: home.html
output/_sources/2_getting_started/: home.rst.txt
output/_sources/4_community_matrix/: home.rst.txt
src/dcFBA/: DefaultModels.py  Exceptions.py  __init__.py
src/dcFBA/DynamicModels/: DynamicFBABase.py  DynamicJointFBA.py  DynamicModelBase.py  DynamicParallelFBA.py  EndPointFBA.py  StaticOptimizationModel.py
src/dcFBA/Helpers/: BuildCommunityMatrix.py  BuildEndPointModel.py  OptimalSearch.py  ReduceModel.py
src/dcFBA/Models/: CommunityModel.py  KineticsStruct.py  Transporters.py  __init__.py
src/dcFBA/ToyModels/: __init__.py  model_a.py  (+2 more)
tests/: test_BuildCommunityMatrix.py  test_CommunityModel.py  test_build_community_matrix.py
tests/DynamicModelsTests/: test_DynamicJointFBA.py  test_DynamicParallelFBA.py  test_DynamicSingleFBA.py  test_EndPointFBA.py
tests/HelpersTests/: test_BuildCommunityMatrix.py  test_OptimalSearch.py
tests/ModelsTest/: test_CommunityModel.py
(+127 files in other folders)
