[metadata]
name = dcFBA
version = 0.1.0
author = Steven Wijnen, Francesco Moro, Brett Olivier
author_email = steven.wijnen@icloud.com, f.moro@vu.nl, b.g.olivier@vu.nl
license = LICENSE
description = Python package for Dynamic Community FBA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SystemsBioinformatics/dynamic-community-fba
project_urls =
    Bug Tracker = https://github.com/SystemsBioinformatics/dynamic-community-fba/issues
    Docs = https://dynamic-community-fba.readthedocs.io/en/latest/index.html
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = Microbial Community, Systems Biology, Dynamic FBA, Genome Scale Models

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8, <3.11
install_requires =
    cbmpy >= 0.8.8
    pyparsing >= 3.0

[options.packages.find]
where = src
